CARE-no-cglib: checkpoint